# drino

./: .gitignore  Cargo.toml  Readme.md  config.json  config.yaml  rust-toolchain.toml  shell.nix
common/: Cargo.toml
common/src/: lib.rs
common/src/types/: config.rs  dataset.rs  errors.rs  mod.rs  trip.rs
common/src/types/config/: features.rs
common/src/util/: df.rs  distance.rs  duration.rs  geoarrow_lines.rs  logging.rs  mod.rs  speed.rs  time.rs
data-harvester/: Cargo.toml
data-harvester/src/: gtfs_file.rs  lib.rs  step1_fetch.rs  step3_validate.rs  step4_merge.rs  step4_merge_data.rs  step5_simplify.rs
data-harvester/src/step2_import/: gtfs.rs  mod.rs
data-harvester/src/step2_import_data/: gtfs.rs  mod.rs
data-harvester/src/step3_validate_data/: mod.rs  rule_violations.rs  rules.rs
routing/: Cargo.toml
routing/src/: algorithm.rs  direct_connections.rs  journey.rs  lib.rs  tests.rs  write_tmp_file.rs
routing/src/algorithms/: errors.rs  initialization.rs  mod.rs
routing/src/algorithms/queries/: cardinality.rs  earliest_arrival.rs  latest_departure.rs  mod.rs  range.rs
routing/src/raptor/: mod.rs  preprocessing.rs  routing.rs  state.rs  tests.rs
routing/src/stp/: mod.rs
routing/src/stp/preprocessing/: dbscan_cluster.rs  gmm_cluster.rs  init.rs  mod.rs  optics_cluster.rs
routing/src/stp/preprocessing/clustering/: dbscan.rs  filter_for_cluster.rs  gmm.rs  k_means.rs  merging.rs  mod.rs  optics.rs  optics_geo.rs
routing/src/tp/: init.rs  mod.rs  querying.rs  transfer_patterns.rs  transit_network.rs
routing/src/tp/transfer_pattern_ds/: errors.rs  graph.rs  mod.rs  table.rs
routing/src/transfers/: crow_fly.rs  fixed_time.rs  mod.rs  noop.rs
scripts/clustering/: optics_plot.py  optics_xi_extract_clusters.py
scripts/files/: view_ipc.py
server/: Cargo.toml
server/src/: lib.rs
server/src/api/v1/: mod.rs  routing.rs
server/src/api/v1/types/: queries.rs
src/: bootstrap_config.rs  config.rs  dataset.rs  gtfs_file.rs  logging.rs  main.rs  preprocessing.rs
src/preprocessing_steps/: mod.rs  step1_fetch_data.rs  step4_merge_data.rs  step5_simplify.rs
src/preprocessing_steps/step2_import_data/: gtfs.rs  mod.rs
src/preprocessing_steps/step3_validate_data/: mod.rs  rule_severity.rs  rule_violations.rs  rules.rs
src/routing/: algorithm.rs  mod.rs
src/routing/stp/: mod.rs
src/routing/stp/preprocessing/: cluster.rs
visualization/: Cargo.toml  README.md  build.rs  cert.pem  key.pem
visualization/src/: lib.rs  main.rs
visualization/src/api/v1/: config.rs  mod.rs  stats.rs  status.rs
visualization/ui/: .gitignore  .pnp.cjs  README.md  components.json  next.config.mjs  package.json  pnpm-lock.yaml  react-router.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
visualization/ui/app/: app.css  root.tsx  routes.ts
visualization/ui/app/components/ui/: calendar.tsx  date-picker.tsx  empty-state.tsx  sidebar.tsx  skeleton.tsx  spinner.tsx  tooltip.tsx
visualization/ui/app/components/ui/dashboard/: card-stats.tsx
visualization/ui/app/components/ui/icon/: drino.tsx
visualization/ui/app/components/ui/navigation/: navbar.tsx  react-router-breadcrumbs.tsx
visualization/ui/app/layouts/: sidebar.tsx
visualization/ui/app/lib/: utils.ts
visualization/ui/app/routes/: datasets.tsx  home.tsx  live-map.tsx  map.tsx  routing.tsx
visualization/ui/app/welcome/: welcome.tsx
visualization/ui/assets/live-map/: direction-icon-mapping.json
visualization/ui/src/app/: globals.css  layout.tsx
visualization/ui/src/app/dashboard/: layout.tsx  page.tsx
visualization/ui/src/app/dashboard/datasets/: page.tsx
visualization/ui/src/app/dashboard/map/: page.tsx
visualization/ui/src/components/ui/dashboard/: card-stats.tsx
visualization/ui/src/components/ui/icon/: drino.tsx
visualization/ui/src/components/ui/navigation/: navbar.tsx  nuxt-breadcrumbs.tsx
