[package]
name = "drino"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "data-harvester",
    "visualization",
    "routing",
    "common"
]

[dependencies]
data-harvester = { path = "data-harvester", package = "drino-data-harvester" }
visualization = { path = "visualization", package = "drino-visualization" }
routing = { path = "routing", package = "drino-routing" }
common = { path = "common", package = "drino-common" }
polars = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.77"
dashmap = { version = "6.0.1", features = ["rayon"] }
rayon = "1.9.0"
serde = { workspace = true }
serde_yaml = "0.9.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.10"
futures = { version = "0.3.30", features = [] }
itertools = "0.13.0"
smartstring = "1.0.1"
log = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
num-traits = "0.2.17"
hashbrown = "0.15.1"
clap = { version = "4.5.18", features = ["env", "derive"] }

[workspace.dependencies]
thiserror = "1.0.56"
chrono = "0.4.38"
tempfile = "3.12.0"
hashbrown = "0.15.1"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
log = "0.4"
serde = { version = "1.0.196", features = ["derive"] }
env_logger = "0.11.5"
geo = "0.29.2"

[workspace.dependencies.polars]
version = "0.44.2"
features = [
    "performant",
    "parquet",
    "streaming",
    "lazy",
    "decompress",
    "csv",
    "semi_anti_join",
    "list_eval",
    "ndarray",
    "partition_by",
    "strings",
    "timezones",
    "dtype-duration",
    "dtype-struct",
    "rows",
    "random",
    "json",
]

[build]
rustflags = ["-C target-cpu=native"]
