[package]
name = "drino"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "data-harvester",
    "visualization",
    "routing",
    "common",
    "server"
]

[dependencies]

data-harvester = { path = "data-harvester", package = "drino-data-harvester" }
visualization = { path = "visualization", package = "drino_visualization" }
server = { path = "server", package = "drino_server" }
routing = { workspace = true }
common = { workspace = true }
actix-web = { workspace = true }
polars = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yml = "0.0.12"
serde_json = "1.0.134"
tokio = { workspace = true }
futures = { version = "0.3.30", features = [] }
log = { workspace = true }
indicatif = { workspace = true }
clap = { version = "4.5.18", features = ["env", "derive"] }

[workspace.dependencies]
common = { path = "common", package = "drino-common" }
routing = { path = "routing", package = "drino-routing" }
actix-web = { version = "4.9.0" }
thiserror = "1.0.56"
chrono = "0.4.38"
tempfile = "3.12.0"
hashbrown = "0.15.1"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
log = "0.4"
serde = { version = "1.0.196", features = ["derive"] }
env_logger = "0.11.5"
geo = "0.29.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
geoarrow = { version = "0.4.0-beta.3", features = ["parquet"] }
# arrow-schema, arrow-array need to have matching version for geoarrow
arrow-schema = "53.3.0"
arrow-array = "53.3.0"
# pyo3 = { version = "0.23.3", features = ["auto-initialize"] }

[workspace.dependencies.polars]
version = "0.44.2"
features = [
    "performant",
    "parquet",
    "streaming",
    "lazy",
    "decompress",
    "csv",
    "semi_anti_join",
    "list_eval",
    "ndarray",
    "partition_by",
    "strings",
    "timezones",
    "dtype-duration",
    "dtype-struct",
    "rows",
    "random",
    "json",
]
