[package]
name = "drino-common"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true }
serde = { workspace = true }
url = { version = "2.5.0", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["stream"] }
