[package]
name = "drino-common"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true }
serde = { workspace = true }
url = { version = "2.5.0", features = ["serde"] }
env_logger = { workspace = true }
thiserror = { workspace = true }
either = { version = "1.13.0", features = ["serde"] }
regex = { version = "1.11.1", features = [] }
geo = { workspace = true }
geoarrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
itertools = "0.13.0"