[package]
name = "drino-data-harvester"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
routing = { workspace = true }
polars = { workspace = true }
tempfile = { workspace = true }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
thiserror = { workspace = true }
reqwest = "0.12.7"