[package]
name = "drino-routing"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", package = "drino-common" }
polars = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
async-trait = "0.1.82"
dashmap = { version = "6.0.1", features = ["rayon"] }
ordered-float = "4.2.0"
rayon = "1.9.0"
itertools = "0.13.0"
geo = { workspace = true }
linfa-clustering = { version = "0.7.0", features = ["default"] }
linfa = { version = "0.7.0", features = ["default"] }
linfa-nn = "0.7.0"
ndarray = "0.15.6" # this must match linfa's ndarray version!
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.10"
url = { version = "2.5.0", features = ["serde"] }
futures = { version = "0.3.30", features = [] }
pathfinding = "4.9.1"
petgraph = "0.6.4"