[package]
name = "drino-visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { workspace = true }
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-web-static-files = "4.0"
serde = { version = "1.0.216", features = ["derive"] }
rustls-pemfile = "2.2.0"
rustls = "0.23.20"
static-files = "0.2.4"

[build-dependencies]
static-files = "0.2.4"