[package]
name = "drino_visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
polars = { workspace = true }
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-web-static-files = "4.0"
actix-web-lab = "0.23.0"
serde = { version = "1.0.216", features = ["derive"] }
rustls-pemfile = "2.2.0"
rustls = "0.23.20"
static-files = "0.2.4"
log = { workspace = true }
tokio = { workspace = true }
url = "2.5.3"

[build-dependencies]
static-files = "0.2.4"