[package]
name = "drino_visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
polars = { workspace = true }
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = { workspace = true }
actix-web-static-files = "4.0"
actix-web-lab = "0.23.0"
serde = { version = "1.0.216", features = ["derive"] }
static-files = "0.2.4"
log = { workspace = true }
tokio = { workspace = true }
url = "2.5.3"

[build-dependencies]
static-files = "0.2.4"